kubernetes/cluster/media/calibre/calibre-web-automated.yaml
# Ingress: calibre.brhd.io
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
  namespace: media
  labels:
    app.kubernetes.io/name: calibre-web-automated
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  selector:
    app.kubernetes.io/name: calibre-web-automated
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-automated
  namespace: media
  labels:
    app.kubernetes.io/name: calibre-web-automated
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web-automated
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: calibre
    spec:
      restartPolicy: Always
      containers:
        - name: calibre-web-automated
          image: crocodilestick/calibre-web-automated:v3.0.4
          # resources:
          #   requests:
          #     memory: 500Mi
          #     cpu: 500m
          #   limits:
          #     memory: 1000Mi
          #     cpu: 1000m
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: calibre-config
              mountPath: /config
            # - name: downloads
            #   mountPath: /downloads
      volumes:
        - name: calibre-config
          persistentVolumeClaim:
            claimName: calibre-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
