kubernetes/cluster/media/calibre/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: media
  labels:
    app.kubernetes.io/name: calibre
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,authorization 
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://calibre.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-outpost-embedded.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
spec:
  rules:
    - host: calibre.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calibre-web-automated
                port:
                  number: 8083
          - pathType: Prefix
            path: /request
            backend:
              service:
                name: calibre-book-downloader
                port:
                  number: 8084
  tls:
    - hosts:
        - calibre.brhd.io
